objects/vlocity_cmt__AsyncExecuteJob__e.object
<CustomObject>
    <description>Controls the creation of Queueable jobs.</description>
    <fields>
        <fullName>vlocity_cmt__AdditionalData__c</fullName>
        <description>Additional data for all custom processes.</description>
        <label>Additional Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessId__c</fullName>
        <description>ID of the Async Process record.</description>
        <label>Async Process</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncProcessStepId__c</fullName>
        <description>ID of the Async Process Step record.</description>
        <label>Async Process Step</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ItemsToProcessList__c</fullName>
        <description>List of the Items to be processed.</description>
        <label>Items To Process List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JobConfiguration__c</fullName>
        <description>Job configuration details such as VIP/Apex name and AsyncSetSize.</description>
        <label>Job Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Async Execute Job</label>
    <pluralLabel>Async Execute Jobs</pluralLabel>
</CustomObject>